fix attr in bonus

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="templates">
-          <div class="cd" value="{{genre}}" >
+          <div class="cd" data-value="{{genre}}" >
               <img src="{{poster}}" alt="">
               <h3>{{title}}</h3>
               <span class="author">{{author}}</span>
